src/objects/Properties__c.object
<CustomObject>
    <fields>
        <fullName>Market_Rate_Unit_Type__c</fullName>
        <label>Market Rate Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SRO</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>Jr. 1 Bedroom</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom</fullName>
                </value>
                <value>
                    <fullName>1+ Bedroom</fullName>
                </value>
                <value>
                    <fullName>2 Bedroom</fullName>
                </value>
                <value>
                    <fullName>2+ Bedroom</fullName>
                </value>
                <value>
                    <fullName>3 Bedroom</fullName>
                </value>
                <value>
                    <fullName>3+ Bedroom</fullName>
                </value>
                <value>
                    <fullName>4 Bedroom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Company_Agent_Address__c</fullName>
        <label>Marketing Company Agent Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Company_Agent_Email__c</fullName>
        <label>Marketing Company Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Company_Agent_Name__c</fullName>
        <label>Marketing Company Agent Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Company_Agent_Phone__c</fullName>
        <label>Marketing Company Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Marketing_Company_Name__c</fullName>
        <label>Marketing Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Approval_Date__c</fullName>
        <label>Marketing Plan Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Approval_Status__c</fullName>
        <label>Marketing Plan Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Plan_MOHCD_Follow_up_Details__c</fullName>
        <label>Marketing Plan MOHCD Follow-up Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Plan Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Submit_Date__c</fullName>
        <label>Marketing Plan Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Qualifying_Income_Level_of_HH__c</fullName>
        <defaultValue>&quot;Maximum household income must not exceed the following amounts by household size:&quot; &amp; BR() &amp; BR() &amp; 

&quot;100% of Maximum Income by Household Size derived from the Unadjusted Area Median Income (AMI) for HUD Metro Fair Market Rent Area (HMFA) that contains San Francisco 2014&quot;
&amp; BR() &amp; BR() &amp;

&quot;A one person household can make no more than $67,950&quot; &amp; BR() &amp;
&quot;A two person household can make no more than $77,700&quot; &amp; BR() &amp;
&quot;A three person household can make no more than $87,400&quot; &amp; BR() &amp;
&quot;A four person household can make no more than $97,100&quot; &amp; BR() &amp;
&quot;A five person household can make no more than $104,850&quot; &amp; BR() &amp;
&quot;A six person household can make no more than $112,650&quot; &amp; BR() &amp;
&quot;A seven person household can make no more than $120,400&quot; &amp; BR() &amp; BR() &amp;

&quot;(Visit www.sfmohcd.org for larger households.)&quot;&amp; BR() &amp; BR() &amp;

&quot;Note: These units are priced to be affordable to households at 90% of AMI but will allow households earning up to 100% of AMI to qualify for the units per new program rules outlined in the City and County of San Francisco Inclusionary Housing Program Monitoring and Procedures Manual 2013. &quot;</defaultValue>
        <inlineHelpText>Maximum qualifying income level of applicant households</inlineHelpText>
        <label>Max. Qualifying Income Level of HH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_AMI__c</fullName>
        <label>Maximum AMI % Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Allowable_Income_Level_of_HH__c</fullName>
        <defaultValue>&quot;of Maximum Income by Household Size derived from the Unadjusted Area Median Income (AMI) for HUD Metro Fair Market Rent Area (HMFA) that contains San Francisco 2013&quot; &amp; BR() &amp; BR() &amp;

&quot;A one person household can make no more than $37,350&quot;&amp; BR()&amp;
&quot;A two person household can make no more than $42,750&quot;&amp; BR()&amp;
&quot;A three person household can make no more than $48,050&quot;&amp; BR()&amp;
&quot;A four person household can make no more than $53,400&quot;&amp; BR()&amp;
&quot;A five person household can make no more than $57,650&quot;&amp; BR()&amp;
&quot;A six person household can make no more than $61,950&quot;&amp; BR()&amp;
&quot;A seven person household can make no more than $66,200&quot;&amp; BR()&amp;

&quot;(Please visit www.sfmohcd.org for larger households.)&quot;</defaultValue>
        <inlineHelpText>Maximum Allowable Income Level of Households</inlineHelpText>
        <label>Maximum Allowable Income Level of HH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_City_2nd_Loan_Amount__c</fullName>
        <defaultValue>&quot;$100,000 or 15% of the purchase price, whichever is less.&quot;</defaultValue>
        <label>Maximum City 2nd Loan Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Household_Income_Allowed__c</fullName>
        <label>Maximum Household Income Allowed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Household_Size_Rule__c</fullName>
        <defaultValue>&quot;Maximum occupancy is 2 persons per bedroom plus one additional household member. Children under age 6 do not count towards the maximum occupancy levels. Household must meet occupancy standards.&quot;</defaultValue>
        <label>Maximum Household Size Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Allowable_Income_Level_of_HH__c</fullName>
        <defaultValue>&quot;Household income must be 2 or 2.5 times income to qualify to rent at this property.&quot;</defaultValue>
        <label>Minimum Allowable Income Level of HH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Household_Size_Rule__c</fullName>
        <defaultValue>&quot;Households must be at least as many people as there are bedrooms in the unit to apply.&quot;</defaultValue>
        <label>Minimum Household Size Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Monthly_Household_Income_Needed__c</fullName>
        <label>Minimum Monthly Household Income Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_Dues__c</fullName>
        <label>Monthly HOA Dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent__c</fullName>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSR_Recorded_Date__c</fullName>
        <label>NSR Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_CCSF_Planner__c</fullName>
        <label>Name of CCSF Planner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bayview</fullName>
                </value>
                <value>
                    <fullName>Bernal Heights</fullName>
                </value>
                <value>
                    <fullName>Castro/Upper Market</fullName>
                </value>
                <value>
                    <fullName>Chinatown</fullName>
                </value>
                <value>
                    <fullName>Civic Center</fullName>
                </value>
                <value>
                    <fullName>Crocker Amazon</fullName>
                </value>
                <value>
                    <fullName>Diamond Heights</fullName>
                </value>
                <value>
                    <fullName>Embarcadero</fullName>
                </value>
                <value>
                    <fullName>Excelsior</fullName>
                </value>
                <value>
                    <fullName>Financial District</fullName>
                </value>
                <value>
                    <fullName>Glen Park</fullName>
                </value>
                <value>
                    <fullName>Golden Gate Park</fullName>
                </value>
                <value>
                    <fullName>Haight Ashbury</fullName>
                </value>
                <value>
                    <fullName>Inner Richmond</fullName>
                </value>
                <value>
                    <fullName>Inner Sunset</fullName>
                </value>
                <value>
                    <fullName>Lakeshore</fullName>
                </value>
                <value>
                    <fullName>Marina</fullName>
                </value>
                <value>
                    <fullName>Mission</fullName>
                </value>
                <value>
                    <fullName>Nob Hill</fullName>
                </value>
                <value>
                    <fullName>Noe Valley</fullName>
                </value>
                <value>
                    <fullName>North Beach</fullName>
                </value>
                <value>
                    <fullName>Ocean View</fullName>
                </value>
                <value>
                    <fullName>Outer Mission</fullName>
                </value>
                <value>
                    <fullName>Outer Richmond</fullName>
                </value>
                <value>
                    <fullName>Outer Sunset</fullName>
                </value>
                <value>
                    <fullName>Pacific Heights</fullName>
                </value>
                <value>
                    <fullName>Parkside</fullName>
                </value>
                <value>
                    <fullName>Potrero Hill</fullName>
                </value>
                <value>
                    <fullName>Presidio</fullName>
                </value>
                <value>
                    <fullName>Presidio Heights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_or_Existing__c</fullName>
        <label>New or Existing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_of_Special_Restrictions_Doc_No__c</fullName>
        <label>Notice of Special Restrictions Doc #</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Commercial_Stories__c</fullName>
        <label>Number of Commercial Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Residential_Stories__c</fullName>
        <label>Number of Residential Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupancy_Type__c</fullName>
        <label>Occupancy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onsite_Contact_Email__c</fullName>
        <description>Onsite contact information if different from general contact info</description>
        <label>Onsite Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Onsite_Contact_Name__c</fullName>
        <description>Name of the onsite contact person, if different from general contact info</description>
        <label>Onsite Contact Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_Contact_Phone_Number__c</fullName>
        <description>Onsite contact information if different from general contact info</description>
        <label>Onsite Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Open_House_Dates_Times__c</fullName>
        <label>Open House Dates/Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Fees_and_or_Building_Rules__c</fullName>
        <inlineHelpText>Some examples include late payment fees, pet fees, or other building fees.</inlineHelpText>
        <label>Other Fees and/or Building Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Qualification_Notes__c</fullName>
        <label>Other Qualification Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Type__c</fullName>
        <formula>IF( ISPICKVAL(Occupancy_Type__c, &quot;Ownership&quot;) , IF ( ISPICKVAL(New_or_Existing__c , &quot;New&quot;) , &quot;New&quot;, &quot;&quot; ) , &quot;Resale&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Development_Name__c</fullName>
        <formula>Parent_Development__r.Development_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Development Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Development__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The development that this property is a part of.</description>
        <inlineHelpText>The development that this property is a part of.</inlineHelpText>
        <label>Parent Development</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Properties__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Development</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Properties__c</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Property_Name__c</fullName>
        <formula>Parent_Property__r.Property_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The property that this unit is a part of.</description>
        <inlineHelpText>The property that this unit is a part of.</inlineHelpText>
        <label>Parent Property</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Properties__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Property</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Properties__c</referenceTo>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parking_Available__c</fullName>
        <formula>IF ( ISPICKVAL( Parking_Space_Price_Inclusion_Rentals__c , &apos;Included with Rent&apos; ) , &apos;Yes&apos; , 
    IF ( ISPICKVAL ( Parking_Space_Price_Inclusion_Rentals__c , &apos;Leased Separately&apos; ) , &apos;Yes&apos; , &apos;No&apos; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parking Available?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Fee_Monthly__c</fullName>
        <label>Parking Fee (Monthly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parking_Info__c</fullName>
        <formula>IF ( Parking_Available__c != &apos;Yes&apos; , &apos;Parking Not Available&apos; , 
    IF ( ISPICKVAL ( Parking_Space_Price_Inclusion_Rentals__c , &apos;Leased Separately&apos; ) , &apos;One parking space per unit available for additional monthly fee&apos; , &apos;Each unit includes one parking space as part of the rent&apos; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parking Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Price_for_Rental_Units__c</fullName>
        <label>Parking Price (for Rental Units)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parking_Space_Price_Inclusion_Rentals__c</fullName>
        <label>Parking Space Price Inclusion-RENT ONLY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parking Not Available</fullName>
                </value>
                <value>
                    <fullName>Included with Rent</fullName>
                </value>
                <value>
                    <fullName>Leased Separately</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Space_Price_Inclusion_Sales__c</fullName>
        <label>Parking Space Price Inclusion-OWN ONLY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Included in Sales Price</fullName>
                </value>
                <value>
                    <fullName>Sold/Leased Separately</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Space_Purchase_Type__c</fullName>
        <label>Parking Space Purchase Type-OWN ONLY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Space__c</fullName>
        <label>Parking Space #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo_1_Caption__c</fullName>
        <label>Photo 1 Caption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Photo_2_Caption__c</fullName>
        <label>Photo 2 Caption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Photo_3_Caption__c</fullName>
        <label>Photo 3 Caption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planning_Motion_Adopted_Date__c</fullName>
        <label>Planning Motion Adopted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planning_Motion__c</fullName>
        <label>Planning Motion #</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_End_Date__c</fullName>
        <inlineHelpText>The property posting will be removed from the MOHCD website on this date.</inlineHelpText>
        <label>Posting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pref_Lenders_are_MOHCD_approved_for_BMR__c</fullName>
        <description>In order for your preferred lenders to provide loan preapprovals to BMR applicants, they must be approved by MOHCD.  Are your preferred lenders currently listed on the list of MOHCD-approved BMR lenders at www.sfmohcd.org?</description>
        <inlineHelpText>In order for your preferred lenders to provide loan preapprovals to BMR applicants, they must be approved by MOHCD.  Are your preferred lenders currently listed on the list of MOHCD-approved BMR lenders at www.sfmohcd.org?</inlineHelpText>
        <label>Pref. Lenders are MOHCD approved for BMR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Lender_1_Bank_Brokerage_Name__c</fullName>
        <label>Preferred Lender 1: Bank/Brokerage Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_1_Contact_Phone__c</fullName>
        <label>Preferred Lender 1: Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_1_Lending_Officer_Name__c</fullName>
        <label>Preferred Lender 1: Lending Officer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_2_Bank_Brokerage_Name__c</fullName>
        <label>Preferred Lender 2: Bank/Brokerage Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_2_Contact_Phone__c</fullName>
        <label>Preferred Lender 2: Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_2_Lending_Officer_Name__c</fullName>
        <label>Preferred Lender 2: Lending Officer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_3_Bank_Brokerage_Name__c</fullName>
        <label>Preferred Lender 3: Bank/Brokerage Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_3_Contact_Phone__c</fullName>
        <label>Preferred Lender 3: Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_3_Lending_Officer_Name__c</fullName>
        <label>Preferred Lender 3: Lending Officer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lenders_Req_d_for_Preapproval__c</fullName>
        <description>Is there any special circumstance about your building that would require buyers to work through your preferred lenders for a loan preapproval before you would feel comfortable entering into a contract with a BMR buyer?</description>
        <inlineHelpText>Is there any special circumstance about your building that would require buyers to work through your preferred lenders for a loan preapproval before you would feel comfortable entering into a contract with a BMR buyer?</inlineHelpText>
        <label>Preferred Lenders Req&apos;d for Preapproval?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Lenders_Requirement_Reason__c</fullName>
        <description>Explain the special circumstances that would require buyers to work through your preferred lenders for a loan preapproval before you would feel comfortable entering into a contract with that BMR buyer.</description>
        <inlineHelpText>Explain the special circumstances that would require buyers to work through your preferred lenders for a loan preapproval before you would feel comfortable entering into a contract with that BMR buyer.</inlineHelpText>
        <label>Preferred Lenders Requirement Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preliminary_Title_Report_Date__c</fullName>
        <label>Preliminary Title Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_Title_Report_Exceptions__c</fullName>
        <label>Preliminary Title Report Exceptions</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Range_of_Market_Rate_Units_by_Type__c</fullName>
        <label>Price Range of Market Rate Units by Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_With_Parking__c</fullName>
        <label>Price With Parking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Without_Parking__c</fullName>
        <label>Price Without Parking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Approval_Date__c</fullName>
        <label>Pricing Request Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Approval_Status__c</fullName>
        <label>Pricing Request Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Request_MOHCD_Follow_up_Details__c</fullName>
        <label>Pricing Request MOHCD Follow-up Details</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Request Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Submit_Date__c</fullName>
        <label>Pricing Request Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Procedures_Manual_BMR_Ownership__c</fullName>
        <defaultValue>&quot;All potential buyers must review the 2013 Inclusionary Affordable Housing Program Monitoring and Procedures Manual that governs this property.  Buyers will sign an acknowledgement that they have read and understood this document when purchasing a BMR unit.&quot; &amp; BR()&amp; BR()&amp;

&quot;The 2013 Inclusionary Affordable Housing Program Monitoring and Procedures Manual can be found here: http://sf-moh.org/index.aspx?page=295&quot;</defaultValue>
        <label>Procedures Manual (BMR Ownership)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procedures_Manual_BMR_Rental__c</fullName>
        <defaultValue>&quot;All BMR renters must review and acknowledge the Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013 that governs this property upon the signing of a lease for a BMR unit.&quot; &amp; BR()&amp; BR()&amp;

&quot;The 2013 Inclusionary Affordable Housing Program Monitoring and Procedures Manual can be found here: http://sf-moh.org/index.aspx?page=295&quot;</defaultValue>
        <label>Procedures Manual (BMR Rental)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Address_City__c</fullName>
        <defaultValue>&quot;San Francisco&quot;</defaultValue>
        <inlineHelpText>Enter the city for this Property address. Property address information must match the information in the closing documents.</inlineHelpText>
        <label>Property Address City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_Marketing__c</fullName>
        <formula>Property_Address_Street_Number__c &amp; &quot; &quot; &amp; Property_Address_Street_Name__c &amp; &quot; &quot; &amp; TEXT(Property_Address_Street_Type__c) &amp; &quot; &quot; &amp; Apt_Unit__c &amp; BR() 
&amp; Property_Address_City__c &amp; &quot;, &quot; &amp; Property_Address_State__c &amp; &quot; &quot; &amp; Property_Address_Zip_Code__c</formula>
        <label>Property Address Marketing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_Official_Closing_Docs__c</fullName>
        <formula>Property_Address_Street_Number__c &amp; &quot; &quot; &amp; Property_Address_Street_Name__c &amp; &quot; &quot; &amp; TEXT(Property_Address_Street_Type__c) &amp; &quot; &quot; &amp; Apt_Unit__c &amp; BR() 
&amp; Property_Address_City__c &amp; &quot;, &quot; &amp; Property_Address_State__c &amp; &quot; &quot; &amp; Property_Address_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address (Official Closing Docs)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_State__c</fullName>
        <defaultValue>&quot;CA&quot;</defaultValue>
        <inlineHelpText>Enter the state for this Property address. Property address information must match the information in the closing documents.</inlineHelpText>
        <label>Property Address State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_Street_Name__c</fullName>
        <inlineHelpText>Enter the street name for this Property address. Property address information must match the information in the closing documents.</inlineHelpText>
        <label>Property Address Street Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_Street_Number__c</fullName>
        <inlineHelpText>Enter the street # for this Property address. Property address information must match the information in the closing documents.</inlineHelpText>
        <label>Property Address Street #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>